@@ -1,3 +1,8 @@
+Thu Sep 11 02:31:38 1997  Mikael Djurfeldt  <mdj@mdj.nada.kth.se>
+
+	* session.scm (name): New procedure: Gives name of object.
+	(source): New procedure: Gives source of object.
+
 Wed Sep 10 20:12:45 1997  Mikael Djurfeldt  <mdj@mdj.nada.kth.se>
 
 *	* boot-9.scm (primitive-macro?): New procedure.
